assets/css/global.css
@import "tailwindcss";

@custom-variant dark (&:where(.dark, .dark *));

body,
html {
  margin: 0;
  padding: 0;
}

body {
  position: relative;
  color: black;
  background-color: var(--color-pink-50);
}

body::before {
  content: "";
  position: fixed;
  top: -250vh;
  left: -250vw;
  width: 500vw;
  height: 500vh;
  background-image: url('/assets/img/discord-logo.png');
  background-repeat: repeat;
  background-position: center;
  background-size: 50px;
  transform: rotate(-30deg);
  filter: hue-rotate(80deg) saturate(2);
  opacity: 0.1;
  z-index: -1;
}

.dark body {
  color: white;
  background-color: rgb(121, 52, 80);
}

.dark body::before {
  background-image: url('/assets/img/discord-logo-dark.png');
  opacity: 0.1;
  filter: none;
  z-index: -1;
}

